# timetable

./: .dockerignore  .gitignore  Dockerfile  README.rst  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
e2e_tests/: Dockerfile  tests.py
tests/: conftest.py  fakes.py  utils.py
tests/integrations/: test_repository.py  test_unit_of_work.py  test_user_repository.py
tests/unit/: test_accept.py  test_appointment.py  test_calendar.py  test_handles.py  test_message_bus.py  test_services.py  test_timetable.py  test_views.py
timetable/: Makefile  bootstrap.py  config.py  requirements.txt
timetable/adapters/: orm.py  repository.py
timetable/domain/: accept.py  appointment.py  calendar.py  command.py  event.py  exceptions.py  user.py
timetable/e2e_tests/: tests.py
timetable/entrypoints/: auth.py  bootstrap.py  deps.py  flask_app.py  service.py  user.py
timetable/model/: accept.py  appointment.py
timetable/service_layer/: handlers.py  message_bus.py  services.py  unit_of_work.py  views.py
timetable/tests/integrations/: test_repository.py
timetable/tests/unit/: test_appointment.py
timetable/timetable/: config.py  init_db.py
timetable/timetable/adapters/: repository.py
timetable/timetable/domain/: accept.py  appointment.py
timetable/timetable/entrypoints/: flask_app.py
