[tool.poetry]
name = "Timetable"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
